--- a/styling.css
+++ b/styling.css
@@ -7,24 +7,36 @@
     --col5:#00DEB2;
 
 }
+:root {
+    --col1: rgba(0, 0, 255, 0.534);
+    --col2: rgb(189, 91, 0);
+    --col3: #F59776;
+    --col4: #FF875D;
+    --col5:#00DEB2;
+    --col6: #CBF7FF;
+
+    }
     body {
-        background-color: var(--col1);
+        background-color: var(--col6);
         color: var(--col2);
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     h1 {
         color: var(--col1);
         text-align: center;
-        font: italic 200% fantasy;
+        font: italic bold 100%;
     }
-    p {
-        background-color: var(--col4);
-        color: #333300;
-        text-align: right;
-        border: 3px groove #FFFF33;
-    }
+
    .myInd {
         display : flex;
         justify-content: space-evenly;
         padding : 10px;
-    }
+        text-align: center;
+   }
+
+   .myInd p{
+       text-align: center;
+   }
+
+   @media (max-width :700px) {
+   }
