--- a/styling.css
+++ b/styling.css
@@ -1,12 +1,4 @@
-/* myStyle.css */
-:root {
-    --col1: rgba(0, 0, 255, 0.534);
-    --col2: rgb(189, 91, 0);
-    --col3: #F59776;
-    --col4: #FF875D;
-    --col5:#00DEB2;
 
-}
 :root {
     --col1: rgba(0, 0, 255, 0.534);
     --col2: rgb(189, 91, 0);
@@ -27,14 +19,14 @@
         font: italic bold 100%;
     }
 
-   .myInd {
+   #myInd {
         display : flex;
         justify-content: space-evenly;
         padding : 10px;
         text-align: center;
    }
 
-   .myInd p{
+   #myInd p{
        text-align: center;
    }
 
