--- a/styling.css
+++ b/styling.css
@@ -9,26 +9,18 @@
 
     }
     body {
-        background-color: var(--col6);
         color: var(--col2);
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     h1 {
-        color: var(--col1);
         text-align: center;
         font: italic bold 100%;
     }
 
-   #myInd {
-        display : flex;
-        justify-content: space-evenly;
-        padding : 10px;
-        text-align: center;
-   }
+    #myInd p{
+        background-color: #F59776;
+    }
 
-   #myInd p{
-       text-align: center;
-   }
 
    @media (max-width :700px) {
    }
