--- a/styling-pages.css
+++ b/styling-pages.css
@@ -10,4 +10,6 @@
     body {
         color: var(--col2);
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        background-color: var(--col6);
     }
+
