--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,6 @@
 
 :root {
-    --col1: rgba(0, 0, 255, 0.534);
+    --col1: rgb(40, 40, 255);
     --col2: rgb(189, 91, 0);
     --col3: #F59776;
     --col4: #ffd9cb;
@@ -27,11 +27,16 @@
     }
 
     #headDiv {
+        font-size: x-large;
+        color: black;
         margin-top: 80px;
         padding-top: 100px;
-        background-color: var(--col7);
+        background-color: var(--col8);
         height: 200px;
         text-align: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
     }
 
     #imgOne {
