--- a/styling.css
+++ b/styling.css
@@ -42,6 +42,26 @@
     #imgOne {
         float: right;
         padding-left: 15px;
+        width:280px;
+        
+    }
+    #imgTwo {
+        float: right;
+        padding-left: 15px;
+        width: 330px;
+        
+    }
+
+    #imgThree {
+        float: left;
+        padding-right: 15px;
+        width: 330px;
+    }
+
+    #imgFour {
+        float: right;
+        padding-left: 15px;
+        width: 330px;
     }
 
     #myBody {
@@ -54,27 +74,44 @@
 
 
         #myIndex {
-        gap : 30px;
-        padding: 30px;
+        height: 70px;
+        padding-top: 30px;
         background-color: var(--col5);
         font-size: large;
         position: fixed;
         top: 0;
         width: 100%;
+
         }
+
+
+        #myIn {
+            float: left;
+            display : flex;
+            flex-direction: row;
+            gap : 30px;
+            padding-left: 30px;
+        }
+
+
+        #myInd {
+
+            float: right;
+            padding-right: 70px;
+            display : flex;
+            flex-direction: row;
+            gap : 30px;
+            }
 
 
         #myIndex a:hover{background: #F59776;}
 
-        
-       
-        #myInd {
-        display : flex;
-        flex-direction: row;
-        gap : 30px;
-        float: right;
-        padding-right: 70px;
+        a {
+            text-decoration: none;
+            color:inherit;
         }
+       
+
 
         #footer {
             text-align: center;
@@ -101,6 +138,10 @@
             text-align: center;
             height: 50px;
             padding: 5px;
+          }
+
+          #storyboardHead {
+            text-align:center;
           }
 
 
