--- a/styling.css
+++ b/styling.css
@@ -78,11 +78,6 @@
         width: 330px;
     }
 
-    #imgFour {
-        float: right;
-        padding-left: 15px;
-        width: 330px;
-    }
 
     #myBody {
         margin-left: 50px;
@@ -166,5 +161,31 @@
 
 
 
-        @media (max-width :700px) {
+        @media (max-width:700px) {
+            #myIndex {
+                display:list-item;
+                gap: 30px;
+                height: 100px;
+                padding-top: 30px;
+                background-color: var(--col5);
+                font-size: large;
+                position: fixed;
+                top: 0;
+                width: 100%;
+        
+                }
+        
+                #myIn {
+                    gap : 30px;
+                    padding-left: 30px;
+                    float: none;
+                }
+        
+        
+                #myInd {
+        
+                    float: none;
+                    padding-right: 70px;
+                    gap : 30px;
+                    }
         }
