--- a/styling.css
+++ b/styling.css
@@ -44,19 +44,19 @@
     }
 
     .oneHead {
-        background-image: url(/images/entpheader.png)
+        background-image: url(images/entpheader.png)
     }
 
     .twoHead {
-        background-image: url(/images/diplomats.jpg)
+        background-image: url(images/diplomats.jpg)
     }
 
     .threeHead {
-        background-image: url(/images/denfenders.png)
+        background-image: url(images/denfenders.png)
     }
 
     .fourHead {
-        background-image: url(/images/isfpheader.png)
+        background-image: url(images/isfpheader.png)
     }
 
     #imgOne {
