--- a/styling.css
+++ b/styling.css
@@ -162,6 +162,22 @@
 
 
         @media (max-width:700px) {
+
+            #imgOne {
+                float:none;
+            }
+
+            #imgTwo {
+                float:none;
+            }
+
+            #imgThree {
+                float:none;
+            }
+
+            #myBody {
+                margin:0;
+            }
             #myIndex {
                 display:list-item;
                 gap: 30px;
@@ -169,7 +185,6 @@
                 padding-top: 30px;
                 background-color: var(--col5);
                 font-size: large;
-                position: fixed;
                 top: 0;
                 width: 100%;
         
