--- a/styling.css
+++ b/styling.css
@@ -179,6 +179,10 @@
             text-align:center;
           }
 
+          #storyboardImg {
+              width: 95%;
+          }
+
 
 
         @media (max-width:700px) {
