--- a/styling.css
+++ b/styling.css
@@ -18,6 +18,14 @@
         background-color: var(--col4);    
     }
 
+    #myBody {
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top:0;
+        padding: 50px;
+        background-color: var(--col7);
+    }
+
     h1{
         text-align: center;
     }
@@ -25,6 +33,8 @@
     h2{
         margin-left: 30px;
     }
+
+    /* header images */
 
     #headDiv {
         font-size: x-large;
@@ -38,6 +48,7 @@
         background-attachment: fixed;
         background-size: cover;
     }
+    
 
     .introHead {
         background-image: url(images/16\ avatars.jpg)
@@ -59,6 +70,8 @@
         background-image: url(images/isfpheader.png)
     }
 
+    /* all image styling */
+
     #imgOne {
         float: right;
         padding-left: 15px;
@@ -79,14 +92,7 @@
     }
 
 
-    #myBody {
-        margin-left: 50px;
-        margin-right: 50px;
-        margin-top:0;
-        padding: 50px;
-        background-color: var(--col7);
-    }
-
+    /* index code */
 
         #myIndex {
         height: 70px;
@@ -132,6 +138,7 @@
         }
        
 
+        /* footer code */
 
         #footer {
             text-align: center;
@@ -141,6 +148,7 @@
             height: 50px;
         }
 
+        /* formatting for table */
 
         th {
             background-color: var(--col5);
@@ -159,6 +167,8 @@
             height: 50px;
             padding: 5px;
           }
+
+          /* formatting top part and list */
 
           ul {
               font-size: x-large;
@@ -184,6 +194,7 @@
           }
 
 
+          /* responsive layout code */
 
         @media (max-width:700px) {
 
